# ContextFlow---idea-2.0

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  LICENSE  Makefile  README.md  WARNING  cleanup.ps1  firebase.json  run.py  start.sh  whitelist.json
backend/: .env.example  .gcloudignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37d5a2e97124_add_auditevent_model.py  7ddea97d9fc9_initial_schema.py  8d6125830609_phase_2_models_and_phase_4_5_updates.py
backend/app/: config.py  main.py
backend/app/ai/: embedder.py  prompts.py  rag.py  summarizer.py
backend/app/api/v1/: accounts.py  ai.py  analytics.py  audit.py  auth.py  campaigns.py  compliance.py  conversations.py  customers.py  documents.py  messages.py  register.py  test_endpoints.py
backend/app/core/: security.py  websocket.py
backend/app/db/: __init__.py  lancedb_client.py  session.py
backend/app/events/: campaign_scheduler.py  inbound_worker.py  outbound_worker.py  queues.py
backend/app/integrations/: email_client.py  email_poller.py  instagram.py  telegram_client.py  telegram_poller.py  whatsapp.py
backend/app/models/: __init__.py  agent.py  ai_summary.py  audit.py  bank_account.py  base.py  beneficiary.py  campaign.py  card.py  compliance.py  conversation.py  customer.py  document.py  loan.py  message.py  transaction.py
backend/app/schemas/: auth.py
backend/app/scripts/: patch_seed_db.py  seed_db.py
backend/app/services/: audit_service.py  identity_resolution.py  message_service.py  ticket_manager.py
(+30 files in other folders)
