[project]
name = "contextflow-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "openai>=1.50",
    "fastembed>=0.4",
    "lancedb>=0.10",
    "pyarrow>=14.0",
    "pywa>=2.0",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "aioimaplib>=1.1",
    "PyMuPDF>=1.24",
    "pandas>=2.0",
    "langchain-text-splitters>=0.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
